--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,16 +2,16 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>欢迎使用 MianShop!</title>
+    <title>Welcome to MianShop!</title>
     <meta charset="UTF-8">
 </head>
 <body>
-<h1>欢迎使用 MianShop!</h1>
-<h2>订单管理</h2>
-<a href="/user/login">购物页面</a>
+<h1>Welcome to MianShop!</h1>
+<h2>Order Management</h2>
+<a href="/user/login">Shopping Page</a>
 
-<h2>商品管理</h2>
-<a href="/admin/login">管理员页面</a>
+<h2>Product Management</h2>
+<a href="/admin/login">Admin Page</a>
 
 </body>
 </html>
