--- a/src/main/resources/templates/admin_item.html
+++ b/src/main/resources/templates/admin_item.html
@@ -1,19 +1,19 @@
-<h1>添加新商品</h1>
+<h1>Add New Item</h1>
 <form th:action="@{/admin/item/add}" method="post">
-    <label>商品名称: </label>
+    <label>Item Name: </label>
     <input type="text" name="name" required />
 
-    <label>价格: </label>
+    <label>Price: </label>
     <input type="number" name="price" required />
 
-    <label>库存: </label>
+    <label>Stock: </label>
     <input type="number" name="stock" required />
 
-    <label>类别: </label>
+    <label>Category: </label>
     <input type="text" name="category" required />
 
-    <label>brand: </label>
+    <label>Brand: </label>
     <input type="text" name="brand" required />
 
-    <button type="submit">添加商品</button>
+    <button type="submit">Add Item</button>
 </form>
