--- a/src/main/resources/templates/admin_login.html
+++ b/src/main/resources/templates/admin_login.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>管理员登录</title>
+    <title>Admin Login</title>
 </head>
 <body>
-<h1>管理员登录</h1>
+<h1>Admin Login</h1>
 
-<!-- 登录表单 -->
+<!-- Login form -->
 <form th:action="@{/admin/login}" method="post">
-    用户名：<input type="text" name="username" required/><br>
-    密码：<input type="password" name="password" required/><br>
-    <button type="submit">登录</button>
+    Username: <input type="text" name="username" required/><br>
+    Password: <input type="password" name="password" required/><br>
+    <button type="submit">Login</button>
 </form>
 
-<!-- 错误消息 -->
+<!-- Error message -->
 <p th:if="${errorMessage}" th:text="${errorMessage}" style="color: red;"></p>
 </body>
 </html>
